--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="A simple HTML document with basic structure">
+    <link rel="stylesheet" href="Styles/style.css">
+    <title>Mobile CHESS</title>
 </head>
 <body>
-    
+
+    <h1 id="x">Nexxo</h1>
+
+
+
+
+
+    <script src="Js/main.js"></script>
 </body>
 </html>
