--- a/index.html
+++ b/index.html
@@ -10,7 +10,108 @@
 </head>
 <body>
 
-    <h1 id="x">Nexxo</h1>
+   <header>
+        <div class="logo">
+            <img src="" alt="">
+            <h2>Mobile Chess</h2>
+        </div>
+        <nav>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+   </header>
+
+   <main>
+    <div class="text_main">
+        <h1>Mobile CHESS</h1>
+        <p>Celulares y accesorios</p>
+
+        <div class="btn_access_main">
+            <a href="">Tienda</a>
+            <a href="">Ofertas</a>
+        </div> 
+    </div>
+   </main>
+
+   <article>
+    <div class="values">
+        <div class="value">
+            <i></i>
+            <h3></h3>
+            <p></p>
+        </div>
+        <div class="value">
+            <i></i>
+            <h3></h3>
+            <p></p>
+        </div>
+        <div class="value">
+            <i></i>
+            <h3></h3>
+            <p></p>
+        </div>
+        <div class="value">
+            <i></i>
+            <h3></h3>
+            <p></p>
+        </div>
+    </div>
+   </article>
+
+   <section>
+        <div class="card_about">
+            <h1>Misión</h1>
+            <p>En Chess Mobile, nuestra misión es conectar a las personas con la tecnología más avanzada,  ofreciendo una amplia gama de smartphones y accesorios de última generación a precios  accesibles.
+             Nos destacamos por nuestro asesoramiento personalizado y nuestro compromiso  con la satisfacción del cliente.</p>
+        </div>
+
+        <div class="card_about">
+            <h1>Visión</h1>
+            <p>Aspiramos a ser la tienda de referencia en managua, ofreciendo una experiencia de compra  única y memorable. Queremos ser reconocidos por nuestra amplia variedad de productos, 
+            nuestro servicio técnico de excelencia y nuestra capacidad para anticiparnos a las necesidades de nuestros clientes.</p>
+        </div>
+
+        <div class="card_about">
+            <h1>Valores</h1>
+            <p>
+                Compromiso con el cliente <br>
+                Innovación <br>
+                Honestidad <br> 
+                Responsabilidad <br> 
+                Calidad <br>
+                Trabajo en equipo.
+            </p>
+        </div>
+   </section>
+
+
+   <section id="tienda">
+    <h2>Tienda</h2>
+    <!-- Aquí va tu filtro y productos -->
+
+    <div class="mapa-tienda" style="margin: 30px 0; text-align: center;">
+        <h3>¿Dónde estamos?</h3>
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.857759740072!2d-86.251388!3d12.136389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTLCsDA4JzExLjAiTiA4NsKwMTUnMDUuMCJX!5e0!3m2!1ses!2sni!4v1719345678901!5m2!1ses!2sni" 
+        width="100%" 
+        height="350" 
+        style="border:0; border-radius:12px;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    <br>
+    <a href="https://maps.app.goo.gl/kNmbQhzWsbZUnLcf9" target="_blank" style="display:inline-block;margin-top:12px;padding:10px 24px;background:#0053A1;color:#fff;border-radius:20px;text-decoration:none;font-weight:500;">
+        Cómo llegar
+    </a>
+    </div>
+</section>
+
+   
 
 
 
