--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="icon" href="img/Logo ChessM.png" type="image/png" sizes="16x16">
     <meta name="description" content="Tienda web de Mobile CHESS - Celulares y accesorios">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/blobz.min.css">
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="Styles/mediaQuery.css">
     <link rel="stylesheet" href="Styles/presentation.css">
+    <link rel="stylesheet" href="Styles/blobz.css">
+    <link rel="stylesheet" href="Styles/blobz.min.css">
     <title>CHESS Mobile</title>
 </head>
 
@@ -32,20 +35,28 @@
             <ul class="nav-links" id="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#About">Sobre nosotros</a></li>
-                <li><a href="#Store">Tienda</a></li>
-                <li><a href="#Map">Ubicación</a></li>
+                <li><a href="#Store">Tienda</a></li>     
+                <li><a href="#Map">Ubicación</a></li> 
+                <li><a href="./contactos.html">Contactos</a></li>
             </ul>
         </nav>
     </header>
 
     <main id="inicio">
         <div class="text_main">
-            <h1 translate="no">CHESS Mobile</h1>
+            <h1 translate="no">Chess Mobile</h1>
             <p>Celulares y accesorios</p>
-            <div class="btn_access_main">
+            <button class="shadow__btn">
                 <a href="#Store">Tienda</a>
-            </div>
-        </div>
+            </button> 
+
+        </div> 
+
+        <!-- <div class="animation-main">
+            <div class="tk-blob" style="--fill: #2e7bbb"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 274 303.2">
+    <path d="M260.2 41.4c20 29.2 14.6 74.5 7.2 124.4-7.3 49.9-16.6 104.5-49.2 126-32.5 21.6-88.4 10.2-132-15.2s-75-64.7-83.6-107.8C-6.1 125.7 8 79 36.3 47.8 64.5 16.7 107 1.3 150.9.1c43.9-1.1 89.3 12 109.3 41.3z"></path>
+  </svg></div>
+        </div> -->
 
     </main>
 
@@ -185,41 +196,13 @@
     </section>
 
     <footer>
-        <div class="footer-content"
-            style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center; gap: 24px; padding: 24px 0;">
-
-            <div class="footer-section horario">
-                <h4>Horario de atención</h4>
-                <nav>
-                    <ul style="list-style: none; padding: 0; margin: 0;">
-                        <li>Lunes a Viernes: 9:00 am - 6:00 pm</li>
-                        <li>Sábados: 9:00 am - 2:00 pm</li>
-                        <li>Domingo: Cerrado</li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="footer-section redes-sociales">
-                <h4>Síguenos</h4>
-                <div class="link-redes">
-                    <a href="https://www.tiktok.com/@chessmobilenic?_t=ZM-8xI0kmBvnr4&_r=1" target="_blank"
-                        aria-label="TikTok" style="color: #000;"><i class="fab fa-tiktok fa-lg"></i></a>
-                    <a href="https://www.instagram.com/chessmobilenic?igsh=MXFobndlcDRxMzJrbw==" target="_blank"
-                        aria-label="Instagram" style="color: #000;"><i class="fab fa-instagram fa-lg"></i></a>
-                    <a href="https://www.facebook.com/share/19BRHMSEc3/?mibextid=wwXIfr" target="_blank"
-                        aria-label="Facebook" style="color: #000;"><i class="fab fa-facebook fa-lg"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div style="text-align:center; font-size: 0.95em; color: black; margin-top: 16px;">
+        <div style="text-align:center; font-size: 0.95em;">
             &copy; 2024 Mobile Chess. Todos los derechos reservados.
         </div>
     </footer>
 
 
     <script src="Js/main.js"></script>
-    <script src="Js/presentation.js"></script>
 
     <div id="product-modal" class="modal-overlay" style="display:none;">
         <div class="modal-content">
@@ -240,4 +223,5 @@
         </div>
     </div>
 </body>
+
 </html>
