--- a/contactos.html
+++ b/contactos.html
@@ -51,7 +51,7 @@
                 <strong>¡Tu satisfacción es nuestra prioridad!</strong>
             </p>
             <div class="contact-extra">
-                <p style="font-size:1.2rem; margin-top:18px;">
+                <p style="margin-top:18px;">
                     <strong>¿Tienes dudas sobre un modelo, garantía o formas de pago?</strong><br>
                     Nuestro equipo te responderá lo más rápido posible por WhatsApp, Instagram, Facebook o correo.<br>
                     <br>
@@ -97,11 +97,11 @@
 
     </section>
 
-
-
-
-
-
+    <footer>
+        <div style="text-align:center; font-size: 0.95em;">
+            &copy; 2024 Mobile Chess. Todos los derechos reservados.
+        </div>
+    </footer>
 
 
 
