--- a/contactos.html
+++ b/contactos.html
@@ -67,7 +67,7 @@
 
         <div class="redes">
 
-            <h1>Contactanos</h1> 
+            <h1>Contáctanos</h1> 
             <ul>
                 <li><a href="https://wa.me/+505 78199832?text=Hola%20quiero%20información%20sobre%20los%20productos"
                         target="_blank" aria-label="WhatsApp" style="color: #000;"><i class="fab fa-whatsapp fa-lg"></i>
