--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
                         <li data-category="Tecno" class="filter-btn">Tecno</li>
                         <li data-category="Honor" class="filter-btn">Honor</li>
                         <li data-category="Xiaomi" class="filter-btn">Xiaomi</li>
-                        <li data-category="Accesorios" class="filter-btn">Accesorios</li>
                         <li data-category="TV" class="filter-btn">TV</li>
                     </ul>
                 </nav>
@@ -170,7 +169,6 @@
                 <div id="items-infinix" class="items-store"></div>
                 <div id="items-tecno" class="items-store"></div>
                 <div id="items-honor" class="items-store"></div>
-                <div id="items-accesorios" class="items-store"></div>
                 <div id="items-tv" class="items-store"></div>
             </div>
 
@@ -222,6 +220,27 @@
             </div>
         </div>
     </div>
+
+    <div id="tv-modal" class="modal-overlay" style="display:none;">
+  <div class="modal-content">
+    <span class="close-modal-tv">&times;</span>
+    <div class="modal-flex">
+      <img id="tv-modal-img" src="" alt="" style="width:160px; height:160px; object-fit:cover; border-radius:12px;">
+      <div class="modal-info">
+        <h3 id="tv-modal-title"></h3>
+        <ul style="list-style:none; padding:0; color:#222; text-align:left;">
+          <li><strong>Sistema operativo:</strong> <span id="tv-modal-so"></span></li>
+          <li><strong>Resolución:</strong> <span id="tv-modal-resolucion"></span></li>
+          <li><strong>Conectividad:</strong> <span id="tv-modal-conectividad"></span></li>
+          <li><strong>Funciones:</strong> <span id="tv-modal-funciones"></span></li>
+          <li><strong>Pantalla:</strong> <span id="tv-modal-pantalla"></span></li>
+          <li><strong>Precio:</strong> <span id="tv-modal-precio"></span></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+    </div>
+
 </body>
 
 </html>
